<package format="2">
  <name>point_cloud_mapping</name>
  <version>0.0.0</version>
  <description>

<p>
    PCML - Point Cloud Mapping Library: a complete package for 3D point
    cloud processing, oferring both generic libraries and specific purpose
    nodes.
</p>
<p>
    To keep things modular, PCML is split into a list of smaller libraries, including:
<ul>
    <li>cloud_geometry: areas, distances, intersections, 3D normals/features estimation, norms, projections, statistics,
                      transformations, etc</li>

    <li>cloud_io: a library for Input/Output PCD (Point Cloud Data) processing</li>

    <li>cloud_kdtree: a library for nD spatial decomposition and nearest neighbors searches for PointCloud messages using k-D
                    trees.</li>

    <li>cloud_octree: a library for 3D spatial decomposition of PointCloud messages using octree data structures.</li>

    <li>sample_consensus: a library for SAmple Consensus (SAC) like methods (RANSAC, MSAC, MLESAC, etc,) and geometric shape
                        models (planes, cylinders, cones, torii, lines, spheres, etc)</li>
</ul>
</p>
<p>
   The list of nodes includes:

<ul>
   <li>cloud_downsampler_node: a node which uniformly downsamples a 3D point cloud</li>

   <li>normal_estimation_node: a node which estimates local surface properties at each point such as surface normals,
                             curvature changes, moment invariants, etc.</li>

   <li>planar_fit_node: a node that segments the best plane for a given dataset using a variety of methods</li>
</ul>
</p>

  </description>
  <maintainer email="radu@todo.todo">Radu Bogdan Rusu and contributors</maintainer>
  <license>BSD</license>
  <url>http://pr.willowgarage.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
